# strawberry

./: .gitignore  Dockerfile  README.md  app.py  consolidator.py  demo_app.py  launch.json  loader.py  main.py  pyproject.toml  requirements.txt  temp.txt  tickers.csv
.prefect/: prefect.db  prefect.db-shm  profiles.toml
.streamlit/: config.toml  congif.toml
config/: acquisition copy.json  acquisition.json  consolidation.json  dim_stocks.json  dividend_score.json  dividend_score_rules.json  dividend_yield_table.json  fact_qtr_balance_sheet.json  fact_qtr_financials.json  fact_qtr_income_statement.json  rules.json  tickers.csv
docs/: FCF.md  divendology.md  enhancements  home.md  injest.md  rules.md  sharp.md
docs/alerts/: README.md
docs/dashboard/: README.md
docs/data_ingestion/: README.md
docs/metric_computation/: README.md
docs/ml_modeling/: README.md
docs/moat_analysis/: README.md
docs/orchestration/: README.md
docs/rules/: README.md
docs/sentiment_analysis/: README.md
src/: financial_data_extractor.py  pipeline.py  ticker_loader.py
src/alpha_vantage/: __init__.py  alpha_vantage_api.py  financial_data_injestor.py  injestor.py  price_injestor.py
src/altair_graphs/: altair_grapher.py  base_chart.py  chart_factory.py  div_yield_grapher.py
src/config/: config_loader.py  env_loader.py  rule_config_loader.py  table_config.py
src/consolidators/: alpha_pulse.py  balance_sheet_consolidator.py  cashflow_consolidator.py  column_calc.py  consolidator.py  data_consolidator.py  dcf_calculator.py  ddm_calculator.py  dividend_consolidator.py  dividend_scoring.py  earnings_consolidator.py  score_calc.py  (+4 more)
(+81 files in other folders)
