[tool.poetry]
name = "strawberry"
version = "0.1.0"
description = "Acquisition and UI app for Strawberry project"
authors = ["Todd <toddbadams@outlook.com>"]
packages = [
  { include = "strawberry", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
alpha-vantage = "^2.3.0"
pandas = "^2.0"
streamlit = "^1.47.0"
numpy = "^2.3.1"
parquet = "^1.3.1"
requests = "^2.32.4"
altair = "^5.5.0"
prefect = "^3.4.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"  # unit test
flake8 = "^6.0"  # style guide

[tool.poetry.scripts]
acquisition = "strawberry.acquisition.acq:main"
ui          = "strawberry.ui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
